; ModuleID = '/home/carl/AnghaBench/linux/drivers/crypto/caam/extr_caampkc.c_caam_read_rsa_crt.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/crypto/caam/extr_caampkc.c_caam_read_rsa_crt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GFP_DMA = common dso_local global i32 0, align 4
@GFP_KERNEL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i64, i64)* @caam_read_rsa_crt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @caam_read_rsa_crt(i32* %0, i64 %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  %9 = call i32 @caam_rsa_drop_leading_zeros(i32** %5, i64* %6)
  %10 = load i64, i64* %6, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %13, label %12

12:                                               ; preds = %3
  store i32* null, i32** %4, align 8
  br label %32

13:                                               ; preds = %3
  %14 = load i64, i64* %7, align 8
  %15 = load i32, i32* @GFP_DMA, align 4
  %16 = load i32, i32* @GFP_KERNEL, align 4
  %17 = or i32 %15, %16
  %18 = call i32* @kzalloc(i64 %14, i32 %17)
  store i32* %18, i32** %8, align 8
  %19 = load i32*, i32** %8, align 8
  %20 = icmp ne i32* %19, null
  br i1 %20, label %22, label %21

21:                                               ; preds = %13
  store i32* null, i32** %4, align 8
  br label %32

22:                                               ; preds = %13
  %23 = load i32*, i32** %8, align 8
  %24 = load i64, i64* %7, align 8
  %25 = load i64, i64* %6, align 8
  %26 = sub i64 %24, %25
  %27 = getelementptr inbounds i32, i32* %23, i64 %26
  %28 = load i32*, i32** %5, align 8
  %29 = load i64, i64* %6, align 8
  %30 = call i32 @memcpy(i32* %27, i32* %28, i64 %29)
  %31 = load i32*, i32** %8, align 8
  store i32* %31, i32** %4, align 8
  br label %32

32:                                               ; preds = %22, %21, %12
  %33 = load i32*, i32** %4, align 8
  ret i32* %33
}

declare dso_local i32 @caam_rsa_drop_leading_zeros(i32**, i64*) #1

declare dso_local i32* @kzalloc(i64, i32) #1

declare dso_local i32 @memcpy(i32*, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
